--- a/requirements.txt
+++ b/requirements.txt
@@ -35,7 +35,7 @@ cycler==0.12.1
 cymem 
 dataclasses 
 DataProperty==1.0.1
-datasets==2.16.1
+datasets
 debugpy 
 decorator 
 dill==0.3.7
@@ -46,7 +46,7 @@ docutils==0.20.1
 einops==0.7.0
 emoji==2.11.0
 # en-core-web-sm 
-evaluate==0.4.1
+evaluate
 exceptiongroup==1.2.0
 executing 
 fairscale
@@ -100,7 +100,7 @@ mdit-py-plugins==0.4.0
 mdurl 
 mpmath==1.3.0
 multidict==6.0.5
-multiprocess==0.70.15
+multiprocess
 murmurhash 
 myst-parser==2.0.0
 nest_asyncio 
@@ -116,7 +116,7 @@ opt-einsum==3.3.0
 packaging 
 pandas==2.2.0
 parso 
-pathos==0.3.2
+pathos
 pathvalidate==3.2.0
 pathy 
 peft==0.8.2
