--- a/requirements.txt
+++ b/requirements.txt
@@ -49,7 +49,7 @@ emoji==2.11.0
 evaluate
 exceptiongroup==1.2.0
 executing 
-fairscale
+fairscale==0.4.13
 filelock==3.13.1
 fire==0.5.0
 #flash-attn==2.5.7  #Not working 
