--- a/requirements.txt
+++ b/requirements.txt
@@ -51,7 +51,7 @@ exceptiongroup==1.2.0
 executing 
 fairscale==0.4.13
 filelock==3.13.1
-fire==0.5.0
+fire
 #flash-attn==2.5.7  #Not working 
 Flask==3.0.3
 Flask-RESTful==0.3.10
